--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "vue": "^3.5.17",
     "vuepress": "2.0.0-rc.24",
     "vuepress-theme-hope": "2.0.0-rc.94"
+  },
+  "dependencies": {
+    "vuepress-plugin-giscus": "^2.0.0-alpha.26"
   }
 }
